[project]
name = "hd_node"
description = "Nodes:Combine HDMasks, Cover HDMasks, HD FaceIndex, HD SmoothEdge, HD GetMaskArea, HD Image Levels, HD Ultimate SD Upscale"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/xiaoxiaodesha/hd_node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "hd_node"
Icon = ""
